--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="orangered-color">shakil al jabir</span> world</h1>
-            <h3>I am a BTech in computer science with an aggregate of 80% marks.</h3>
+            <h3 class="orangered-color">I am a BTech in computer science with an aggregate of 80% marks.</h3>
 
             <p>
 
@@ -62,7 +62,7 @@
 
         <div class="half-width">
             <h1>Dream big</h1>
-            <h2>Become a web developer</h2>
+            <h2 class="orangered-color">Become a web developer</h2>
             <p>I have good knowledge of programming languages like C, C++, C#, Java and Assembly.
 
                 - I m compatible on working various operating systems like Linux, windows, etc.
@@ -78,57 +78,64 @@
             </p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
 
-            <div class="half-width">
-
-
-
-    </section class="experience-area">
-    <h1>Experiences</h1>
-
-    <div class="flexible-container">
-
-        <div class="half-width">
-            <h1>Full stack web developer</h1>
-            <h3>2022- present | Pro level Developer</h3>
-
-            <p>I have good knowledge of programming languages like C, C++, C#, Java and Assembly.
-
-                - I m compatible on working various operating systems like Linux, windows, etc.
-
-                - I wrote mySQL procedures for Microsoft SQL Server and PL/SQL stored procedures for Oracle in my final
-                year
-                project.
-                Some of my personal qualities which you may find useful for this role are:
-
-                - Ability to learn quickly coupled with innovative ideas for problem solving
-
-                - Ability to work in a team with strong communication skills</p>
         </div>
-
-        <div class="half-width">
-            <h1>Junior Web Developer</h1>
-            <h3>2022-2024 | Entry level Developer</h3>
-
-            <p>I have good knowledge of programming languages like C, C++, C#, Java and Assembly.
-
-                - I m compatible on working various operating systems like Linux, windows, etc.
-
-                - I wrote mySQL procedures for Microsoft SQL Server and PL/SQL stored procedures for Oracle in my final
-                year
-                project.
-                Some of my personal qualities which you may find useful for this role are:
-
-                - Ability to learn quickly coupled with innovative ideas for problem solving
-
-                - Ability to work in a team with strong communication skills</p>
-        </div>
-    </div>
-
-    <section>
-
 
 
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+
+                <h1>Full stack web developer</h1>
+                <h3 class="orangered-color">2022- present | Pro level Developer</h3>
+
+                <p>I have good knowledge of programming languages like C, C++, C#, Java and Assembly.
+
+                    - I m compatible on working various operating systems like Linux, windows, etc.
+
+                    - I wrote mySQL procedures for Microsoft SQL Server and PL/SQL stored procedures for Oracle in my
+                    final
+                    year
+                    project.
+                    Some of my personal qualities which you may find useful for this role are:
+
+                    - Ability to learn quickly coupled with innovative ideas for problem solving
+
+                    - Ability to work in a team with strong communication skills</p>
+            </div>
+
+            <div id="web-dev" class="experience-item">
+
+                <h1>Junior Web Developer</h1>
+                <h3 class="orangered-color">2022-2024 | Entry level Developer</h3>
+
+                <p>I have good knowledge of programming languages like C, C++, C#, Java and Assembly.
+
+                    - I m compatible on working various operating systems like Linux, windows, etc.
+
+                    - I wrote mySQL procedures for Microsoft SQL Server and PL/SQL stored procedures for Oracle in my
+                    final
+                    year
+                    project.
+                    Some of my personal qualities which you may find useful for this role are:
+
+                    - Ability to learn quickly coupled with innovative ideas for problem solving
+
+                    - Ability to work in a team with strong communication skills</p>
+            </div>
+        </div>
+
+        <section>
+
+
+
+        </section>
+        <footer>
+            <p>@ darkSHADOW 2022 A FULL STACK PROGRAMER </p>
+        </footer>
 
 </body>
 
